Bug 1994908 - Use nearest pres shell widget in ComputeBackstopColor if there's no frame. r=layout-reviewers,dshin

The problem is that we're painting an about:blank document which hasn't
been laid out yet (there's no root frame).

In that case, we used to get a widget from the view tree, but now we
don't.

Introduce PresShell::GetNearestWidget(), and use it to get the closest
widget if there's no root frame so that we don't paint an opaque
backdrop incorrectly.

Differential Revision: https://phabricator.services.mozilla.com/D269293